making responsive for mobile devicess

--- a/index.html
+++ b/index.html
@@ -85,23 +85,103 @@
             <div class="collection-box-container">
 
                 <div class="box">
-                    <img src="./images/tripod.png" alt="">
-                    <h1>Flex Tripod</h1>
-                    <h3>$50.48</h3>
+                    <img src="./images/tripod.png" alt="" class="box-img">
+                    <h1 class="box-t">Flex Tripod</h1>
+                    <h3 class="box-money">$50.48</h3>
                     <ul class="reviews">
                         <li><img src="./tiny/Vector.svg" alt=""></li>
                         <li><img src="./tiny/Vector.svg" alt=""></li>
                         <li><img src="./tiny/Vector.svg" alt=""></li>
                         <li><img src="./tiny/Vector.svg" alt=""></li>
                         <li><img src="./tiny/Vector.svg" alt=""></li>
-                        <span>4.99</span>
+                        <span class="rating">4.99</span>
                     </ul>
+                    <p class="review-text">Wordwide shifting<br>available <br>Buyers protection possible!</p>
 
 
 
+                </div>
+                <div class="box">
+                    <img src="./images/tripod.png" alt="" class="box-img">
+                    <h1 class="box-t">Flex Tripod</h1>
+                    <h3 class="box-money">$50.48</h3>
+                    <ul class="reviews">
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <span class="rating">4.99</span>
+                    </ul>
+                    <p class="review-text">Wordwide shifting<br>available <br>Buyers protection possible!</p>
 
-                    <p>Wordwide shifting available
-                        Buyers protection possible!</p>
+
+
+                </div>
+                <div class="box">
+                    <img src="./images/tripod.png" alt="" class="box-img">
+                    <h1 class="box-t">Flex Tripod</h1>
+                    <h3 class="box-money">$50.48</h3>
+                    <ul class="reviews">
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <span class="rating">4.99</span>
+                    </ul>
+                    <p class="review-text">Wordwide shifting<br>available <br>Buyers protection possible!</p>
+
+
+
+                </div>
+                <div class="box">
+                    <img src="./images/tripod.png" alt="" class="box-img">
+                    <h1 class="box-t">Flex Tripod</h1>
+                    <h3 class="box-money">$50.48</h3>
+                    <ul class="reviews">
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <span class="rating">4.99</span>
+                    </ul>
+                    <p class="review-text">Wordwide shifting<br>available <br>Buyers protection possible!</p>
+
+
+
+                </div>
+                <div class="box">
+                    <img src="./images/tripod.png" alt="" class="box-img">
+                    <h1 class="box-t">Flex Tripod</h1>
+                    <h3 class="box-money">$50.48</h3>
+                    <ul class="reviews">
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <span class="rating">4.99</span>
+                    </ul>
+                    <p class="review-text">Wordwide shifting<br>available <br>Buyers protection possible!</p>
+
+
+
+                </div>
+                <div class="box">
+                    <img src="./images/tripod.png" alt="" class="box-img">
+                    <h1 class="box-t">Flex Tripod</h1>
+                    <h3 class="box-money">$50.48</h3>
+                    <ul class="reviews">
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <li><img src="./tiny/Vector.svg" alt=""></li>
+                        <span class="rating">4.99</span>
+                    </ul>
+                    <p class="review-text">Wordwide shifting<br>available <br>Buyers protection possible!</p>
 
 
 
@@ -114,10 +194,13 @@
 
 
             </div>
-
-
-
-
+            <div class="see-more">
+                <div>
+                    <p>See More</p>
+                </div>
+                <div><img src="./tiny/Group.svg" alt="">
+                </div>
+            </div>
         </section>
 
     </main>
